--- a/index.html
+++ b/index.html
@@ -1,37 +1,65 @@
-<!doctype html>
-<html lang="es">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title></title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="icon" href="images/favicon.png">
-</head>
-
-<body>
-  <section>
-
-        <div class="ng-app-embedded">
-          <div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="viciousmallorca" data-autoplay="true" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93">
+<html lang="es"><head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+    <link id="myCss" rel="stylesheet" type="text/css" href="http://www.radio.es/inc/microsite/css/radio-emb.css" media="all">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Origen Concept - Radioshow</title>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="css/sticky-footer.css" rel="stylesheet">
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <!-- Begin page content -->
+    <div class="container">
+      <div class="page-header">
+        <h1>Origen Concept Radioshow</h1>
+      </div>
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <div class="ng-app-embedded">
+            <div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="viciousmallorca" data-autoplay="true" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div>
           </div>
         </div>
+        <div class="col"></div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Powered by: <a href="http://www.danzumusic.com" target:"_blank">Danzû</a></p>
+      </div>
+    </footer>
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-      <script>( function(d, s)
-                  {if(!window.rel){
-                      s = d.createElement("script");
-                      s.type = "text/javascript";
-                      s.async = true;s.id = "radio-de-embedded";
-                      s.src = "http://www.radio.es/inc/microsite/js/full.js";
-                      d.getElementsByTagName("head")[0].appendChild(s);
-                      window.rel = true;
-                    }
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script>( function(d, s)
+                {if(!window.rel){
+                    s = d.createElement("script");
+                    s.type = "text/javascript";
+                    s.async = true;s.id = "radio-de-embedded";
+                    s.src = "http://www.radio.es/inc/microsite/js/full.js";
+                    d.getElementsByTagName("head")[0].appendChild(s);
+                    window.rel = true;
                   }
-                (document));
-      </script>
-</body>
+                }
+              (document));
+    </script>
 
-</html>
+</body></html>
