Añadido fondo, logo y algunos estilos.

--- a/index.html
+++ b/index.html
@@ -24,12 +24,28 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-    <!-- Begin page content -->
-    <div class="container">
-      <div class="page-header">
-        <h1>Origen Concept Radioshow</h1>
+  <body id="main-container">
+    <!-- LOGO AREA -->
+    <div  class="container">
+      <div class="row">
+        <div class="col"></div>
+        <div id="logo-container"class="col">
+            <img id="logo" src="img/origenlogo.png"/>
+        </div>
+        <div class="col"></div>
       </div>
+
+      <!-- CONTENT AREA-->
+      <div class="row">
+        <div class="col"></div>
+        <div id="logo-container"class="col">
+            <img id="logo" src="img/origenlogo.png"/>
+        </div>
+        <div class="col"></div>
+      </div>
+
+      <!-- RADIO AREA-->
+
       <div class="row">
         <div class="col"></div>
         <div class="col">
@@ -40,6 +56,9 @@
         <div class="col"></div>
       </div>
     </div>
+
+    <!-- FOOTER-->
+
     <footer class="footer">
       <div class="container">
         <p class="text-muted">Powered by: <a href="http://www.danzumusic.com" target:"_blank">Danzû</a></p>
