--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
       <!-- CONTENT AREA-->
       <div class="row">
         <div class="col"></div>
-        <div id="logo-container"class="col">
-            <img id="logo" src="img/origenlogo.png"/>
+        <div class="col">
+            <p id="main-title">RADIO SHOW</p>
+            <p id="simple-text">MIERCOLES</p>
+            <p id="simple-text">19:00H A 20:00H</p>
         </div>
         <div class="col"></div>
       </div>
@@ -50,7 +52,7 @@
         <div class="col"></div>
         <div class="col">
           <div class="ng-app-embedded">
-            <div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="viciousmallorca" data-autoplay="true" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div>
+            <div ui-view class="microsite embedded-radio-player" data-playerwidth="400px" data-playertype="web_embedded" data-playstation="viciousmallorca" data-autoplay="true" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div>
           </div>
         </div>
         <div class="col"></div>
